[FIX] mail: prevent long follower list overflow
Back-port of https://github.com/odoo/odoo/pull/130451

Adapt to 50vh instead of 95vh, as the button is quite in the middle of
the page for small heights, 95vh is still too much.

closes odoo/odoo#132885

--- a/addons/mail/static/src/web/chatter.scss
+++ b/addons/mail/static/src/web/chatter.scss
@@ -30,6 +30,7 @@
      * To by-pass SCSS min() shadowing CSS min(), we rely on SCSS being case-sensitive while CSS isn't.
      */
     max-width: Min(400px, 95vw);
+    max-height: Min(500px, 50vh);
 }
 
 .o-mail-Follower-avatar {
